AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gingaccplayer, 0.10.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX([g++])
AM_PROG_LIBTOOL

CXXFLAGS="-fPIC $CXXFLAGS"
CFLAGS="-fPIC $CFLAGS"

# Bring additional directories where things might be found into our
# search path. I don't know why autoconf doesn't do this by default
for spfx in /usr/lib/ /usr/local/lib/ /usr/local/lib/ginga/ /usr/local/lib/ginga/iocontents; do
if test -d ${spfx}; then
LDFLAGS="-L${spfx} $LDFLAGS"
fi
done

for spfx in /usr/include/ /usr/local/include/ /usr/local/include/ginga/; do
if test -d ${spfx}; then
CPPFLAGS="-I${spfx} $CPPFLAGS"
fi
done

###########
# HEADERS #
###########

##################
# TeleMidia Util #
##################
AC_CHECK_HEADER([util/functions.h], [], AC_MSG_ERROR([

Couldn't find TeleMidia Util headers.
Please install TeleMidia Util Headers.

]))

##########################
# Ginga CC System Thread #
##########################
AC_CHECK_HEADER([system/thread/Thread.h], [], AC_MSG_ERROR([

Couldn't find Ginga CC System Thread headers.
Please install Ginga CC System Thread Headers.

]))

#######
# Lua #
#######
AC_CHECK_HEADER([lua.h], [], AC_MSG_ERROR([

Couldn't find Lua headers.
Please install Lua 5.1.2 or later.

]))

###############
# Ginga CC CM #
###############
AC_CHECK_HEADER([cm/IComponentManager.h], [], AC_MSG_ERROR([

Couldn't find Ginga Common Core Component Manager headers.
Please install gingacc-cm project.

]))

#######################
# Ginga CC System I/O #
#######################
AC_CHECK_HEADER([system/io/interface/IIOContainer.h], [], AC_MSG_ERROR([

Couldn't find Ginga Common Core System I/O headers.
Please install gingacc-system project.

]))


########
# LIBS #
########

##################
# TeleMidia Util #
##################
AC_HAVE_LIBRARY(telemidiautil, , AC_ERROR([

Couldn't find TeleMidia Util library.
Please install TeleMidia Util Library.

]))

##########################
# Ginga CC System Thread #
##########################
AC_HAVE_LIBRARY(gingaccsystemthread, , AC_ERROR([

Couldn't find Ginga CC System Thread library.
Please install Ginga CC System Thread Library.

]))

#########################
# Ginga Common Core I/O #
#########################
AC_HAVE_LIBRARY(gingaccsystemio, , AC_ERROR([

Couldn't find Ginga Common Core System I/O library.
Please install gingacc-system project.

]))

###################
# TeleMidia Links #
###################
AC_HAVE_LIBRARY(telemidialinks, , AC_ERROR([

Couldn't find telemidialinks library.
Please install TeleMidia Links Player.

]))

############
# libasync #
############
#AC_HAVE_LIBRARY(async, , AC_ERROR([
#
#Couldn't find async library.
#Please install libasync.
#
#]))

#######
# Lua #
#######
AC_HAVE_LIBRARY(lua, , AC_ERROR([

Couldn't find Lua library.
Please install Lua 5.1.2 or later.

]))

##############
# JAVA check #
##############
ncletplayer=no
AC_ARG_ENABLE(ncletplayer,
  [  --enable-ncletplayer    build nclet player support [[default=no]]],
  enable_ncletplayer="$enableval", enable_ncletplayer=no)

if test x$enable_ncletplayer = xyes; then
  AC_HAVE_LIBRARY(jni, [
      AC_CHECK_HEADER(SAVIGNON_PATH!!!!/jni.h,
        ncletplayer=yes
        NCLET_LIBS='-ljni -lOUTRAS_LIBS_SAVIGNON'
        NCLET_HEADERS='NCLetPlayer.h'
        AC_DEFINE(HAVE_NCLET, 1, [Def to 1 if you have nclet player support.]),
        AC_MSG_WARN([
*** Headers not found -- nclet player support will not be built.]))
    ], [
      AC_MSG_WARN([
*** jni not found -- nclet player support will not be built.])
    ], -lm -lSAVIGNON_OUTRAS_DEPENDENCIAS)
fi

AM_CONDITIONAL(NCLET, test x$ncletplayer = xyes)
AC_SUBST(NCLET_LIBS)
AC_SUBST(NCLET_HEADERS)

AC_OUTPUT(Makefile files/Makefile files/scripts/Makefile
	include/Makefile src/Makefile src/image/Makefile src/lang/lua/Makefile
	src/text/Makefile src/text/links/Makefile src/text/plain/Makefile
	src/text/srt/Makefile src/video/Makefile src/tv/Makefile
	src/widget/Makefile test/Makefile)

AC_MSG_RESULT([
Build options: 
  Module directory        $MODULEDIR
  NCLET Support           $ncletplayer
])
