# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4
LIBS =
#SUBDIRS = files include/model include/adaptation include/emconverter \
#    include/adapters include/adapters/av include/adapters/av/tv \
#    include/adapters/image include/adapters/procedural \
#    include/adapters/procedural/lua include/adapters/text \
#    include/focus include/prefetch include/ \
#    src/model src/adaptation src/emconverter \
#    src/adapters src/adapters/av src/adapters/text \
#    src/adapters/image src/adapters/procedural/lua \
#    src/focus src/prefetch src test

SUBDIRS = files include/model include/prefetch \
    include/adapters include/ \
    src/model src/adaptation src/emconverter \
    src/adapters src/adapters/av src/adapters/text \
    src/adapters/image src/adapters/procedural/lua \
    src/focus src/gfx src/prefetch src
